syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;

message AddDosenReq{
    string KdDosen = 1;
    string NamaDosen = 2;
    string Keterangan = 3;
    int32 Status = 4;
    string CreateBy = 5; 
}  

message ReadDosenByKdDosenReq{
    string KdDosen = 1;
}

message ReadDosenByKeteranganReq{
    string Keterangan = 1;
}
 
message ReadDosenByKdDosenResp{
    string KdDosen = 1;
    string NamaDosen=2;
    int32 Status=3;
    string CreateBy = 4; 
}

message ReadDosenByKeteranganResp{
    string Keterangan =1;
    string NamaDosen = 2;
    int32 Status = 3;
    string CreateBy =4;
}

message ReadDosenResp{ 
    repeated ReadDosenByKdDosenResp allDosen = 1;
}

service DosenService{
    rpc AddDosen(AddDosenReq) returns (google.protobuf.Empty) {};
    rpc ReadDosenByKdDosen(ReadDosenByKdDosenReq) returns (ReadDosenByKdDosenResp) {};
    rpc ReadDosenByKeterangan(ReadDosenByKeteranganReq) returns (ReadDosenByKeteranganResp) {};
    rpc ReadDosen(google.protobuf.Empty) returns (ReadDosenResp){};
} 